fix: slow internet collapse slider

--- a/movie-search/src/app/css/style.scss
+++ b/movie-search/src/app/css/style.scss
@@ -141,7 +141,7 @@
 
 .swiper-container {
   width: 90%;
-  //height: 570px;
+  height: 570px;
   padding-bottom: 30px;
   @include media-900{
     width: 85%;
